fix overflow wrap for role table (#662)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -26,6 +26,10 @@ body {
   white-space: nowrap;
 }
 
+#RoleTable > div > div > table > tbody > tr > td.ant-table-cell {
+  white-space: normal;
+}
+
 .ant-input,
 .ant-select {
   font-size: 16px;
